[package]
name = "grusty"
version = "0.1.0"
edition = "2024"

[dependencies]
labrador = { version = "0.0.1-alpha", git = "https://github.com/RiaoMike/labrador" }
lattirust-arithmetic = { version = "0.0.1-alpha", git = "https://github.com/lattirust/lattirust" }
lattice-estimator = { version = "0.0.1-alpha", git = "https://github.com/lattirust/lattirust" }
lattirust-util = { version = "0.0.1-alpha", git = "https://github.com/lattirust/lattirust" }
relations = { version = "0.0.1-alpha", git = "https://github.com/lattirust/lattirust" }

ark-std = "0.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
nimue = "0.1.0"